cmake_minimum_required(VERSION 3.27)
project(learning_cpluscplus)

set(CMAKE_CXX_STANDARD 14)

add_executable(learning_cpluscplus_c1 chapter1/main.cpp std_lib_facilities.h)
add_executable(learning_cpluscplus_c2 chapter2/main.cpp std_lib_facilities.h)
add_executable(learning_cpluscplus_c3 chapter3/main.cpp std_lib_facilities.h)
add_executable(learning_cpluscplus_c4 chapter4/main.cpp std_lib_facilities.h)
add_executable(learning_cpluscplus_c4_1 chapter4/find_max.cpp std_lib_facilities.h)
add_executable(learning_cpluscplus_c4_2 chapter4/find_leap_year.cpp std_lib_facilities.h)
add_executable(learning_cpluscplus_c4_3 chapter4/find_vowel.cpp std_lib_facilities.h)
add_executable(learning_cpluscplus_c4_4 chapter4/print_day.cpp std_lib_facilities.h)
add_executable(learning_cpluscplus_c4_5 chapter4/print_month.cpp std_lib_facilities.h)
add_executable(learning_cpluscplus_c4_6 chapter4/convert_degree.cpp std_lib_facilities.h)
add_executable(learning_cpluscplus_c5 chapter5/main.cpp std_lib_facilities.h)
add_executable(learning_cpluscplus_c8 chapter8/main.cpp std_lib_facilities.h)
add_executable(learning_cpluscplus_c10 chapter10/main.cpp std_lib_facilities.h)
add_executable(learning_cpluscplus_c9_1 chapter9/main_dateclass.cpp std_lib_facilities.h)
add_executable(learning_cpluscplus_c9_2 chapter9/main_dogclass.cpp std_lib_facilities.h)
add_executable(learning_cpluscplus_c17 chapter17/main.cpp std_lib_facilities.h)
add_executable(learning_cpluscplus_c18 chapter18/main.cpp std_lib_facilities.h)
add_executable(learning_cpluscplus_c20 chapter20/main.cpp std_lib_facilities.h)
add_executable(learning_cpluscplus_c23 chapter23/main.cpp std_lib_facilities.h)
add_executable(learning_cpluscplus_misc misc/main.cpp std_lib_facilities.h
        misc/macros.h)
add_executable(learning_cpluscplus_misc_auto_kw misc/auto_example.cpp std_lib_facilities.h
        misc/macros.h)
add_executable(learning_cpluscplus_projects_1 projects/rock_paper_scissors/main.cpp std_lib_facilities.h)
add_executable(learning_cpluscplus_projects_2 projects/zoo_keepers/main.cpp std_lib_facilities.h)
