cmake_minimum_required(VERSION 3.27)
project(learning_cpluscplus)

set(CMAKE_CXX_STANDARD 14)

add_executable(principle_and_practice_cpp_c1 principle_and_practice_cpp/chapter1/main.cpp principle_and_practice_cpp/std_lib_facilities.h)
add_executable(principle_and_practice_cpp_c2 principle_and_practice_cpp/chapter2/main.cpp principle_and_practice_cpp/std_lib_facilities.h)
add_executable(principle_and_practice_cpp_c3 principle_and_practice_cpp/chapter3/main.cpp principle_and_practice_cpp/std_lib_facilities.h)
add_executable(principle_and_practice_cpp_c4 principle_and_practice_cpp/chapter4/main.cpp principle_and_practice_cpp/std_lib_facilities.h)
add_executable(principle_and_practice_cpp_c4_1 principle_and_practice_cpp/chapter4/find_max.cpp principle_and_practice_cpp/std_lib_facilities.h)
add_executable(principle_and_practice_cpp_c4_2 principle_and_practice_cpp/chapter4/find_leap_year.cpp principle_and_practice_cpp/std_lib_facilities.h)
add_executable(principle_and_practice_cpp_c4_3 principle_and_practice_cpp/chapter4/find_vowel.cpp principle_and_practice_cpp/std_lib_facilities.h)
add_executable(principle_and_practice_cpp_c4_4 principle_and_practice_cpp/chapter4/print_day.cpp principle_and_practice_cpp/std_lib_facilities.h)
add_executable(principle_and_practice_cpp_c4_5 principle_and_practice_cpp/chapter4/print_month.cpp principle_and_practice_cpp/std_lib_facilities.h)
add_executable(principle_and_practice_cpp_c4_6 principle_and_practice_cpp/chapter4/convert_degree.cpp principle_and_practice_cpp/std_lib_facilities.h)
add_executable(principle_and_practice_cpp_c5 principle_and_practice_cpp/chapter5/main.cpp principle_and_practice_cpp/std_lib_facilities.h)
add_executable(principle_and_practice_cpp_c8 principle_and_practice_cpp/chapter8/main.cpp principle_and_practice_cpp/std_lib_facilities.h)
add_executable(principle_and_practice_cpp_c8_drills principle_and_practice_cpp/std_lib_facilities.h principle_and_practice_cpp/chapter8/drills/my.cpp
        principle_and_practice_cpp/chapter8/drills/use.cpp)
add_executable(principle_and_practice_cpp_c10 principle_and_practice_cpp/chapter10/main.cpp principle_and_practice_cpp/std_lib_facilities.h)
add_executable(principle_and_practice_cpp_c9_1 principle_and_practice_cpp/chapter9/main_dateclass.cpp principle_and_practice_cpp/std_lib_facilities.h)
add_executable(principle_and_practice_cpp_c9_2 principle_and_practice_cpp/chapter9/main_dogclass.cpp principle_and_practice_cpp/std_lib_facilities.h)
add_executable(principle_and_practice_cpp_c17 principle_and_practice_cpp/chapter17/main.cpp principle_and_practice_cpp/std_lib_facilities.h)
add_executable(principle_and_practice_cpp_c18 principle_and_practice_cpp/chapter18/main.cpp principle_and_practice_cpp/std_lib_facilities.h)
add_executable(principle_and_practice_cpp_c19 principle_and_practice_cpp/chapter19/main.cpp principle_and_practice_cpp/std_lib_facilities.h)
add_executable(principle_and_practice_cpp_c19_template_tuts principle_and_practice_cpp/chapter19/template_tuts/main.cpp principle_and_practice_cpp/std_lib_facilities.h)
add_executable(principle_and_practice_cpp_c20 principle_and_practice_cpp/chapter20/main.cpp principle_and_practice_cpp/std_lib_facilities.h)
add_executable(principle_and_practice_cpp_c23 principle_and_practice_cpp/chapter23/main.cpp principle_and_practice_cpp/std_lib_facilities.h)
add_executable(learning_cpluscplus_misc misc/main.cpp principle_and_practice_cpp/std_lib_facilities.h
        misc/macros.h)
add_executable(learning_cpluscplus_misc_auto_kw misc/auto_example.cpp principle_and_practice_cpp/std_lib_facilities.h
        misc/macros.h)
add_executable(learning_cpluscplus_projects_1 projects/rock_paper_scissors/main.cpp principle_and_practice_cpp/std_lib_facilities.h)
add_executable(learning_cpluscplus_projects_2 projects/zoo_keepers/main.cpp principle_and_practice_cpp/std_lib_facilities.h)


add_subdirectory(learningcpp)