cmake_minimum_required(VERSION 3.27)
project(principle_and_practice_cpp)

set(CMAKE_CXX_STANDARD 14)

add_executable(drill17_1 chapter17/drill_1.cpp)
add_executable(drill17_2 chapter17/drill_2.cpp)
add_executable(e3 chapter17/exercise3.cpp)
add_executable(e4 chapter17/exercise4.cpp)
add_executable(e5 chapter17/exercise5.cpp)
add_executable(e78 chapter17/exercise7_8.cpp)
add_executable(e9 chapter17/exercise9.cpp)
add_executable(e11 chapter17/exercise11.cpp)
add_executable(e13 chapter17/exercise13.cpp)
add_executable(e14 chapter17/exercise14.cpp)
add_executable(array_drill chapter18/array_drill.cpp)
add_executable(vector_drill chapter18/vector_drill.cpp)
add_executable(lesson18 chapter18/main.cpp std_lib_facilities.h)
